# Aion

./: .env.example  .gitignore  .prettierignore  AGENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  app.json  check.sh  eslint.config.mjs  global.css  package-lock.json  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: _layout.tsx  index.tsx
app/(tabs)/: _layout.tsx  chat.tsx  index.tsx  more.tsx  read.tsx
components/: BookArtTuner.tsx  BookBackground.tsx  ChatBubble.tsx  ChatInput.tsx  HistoryDrawer.tsx  MilestoneCelebration.tsx  Onboarding.tsx  PromptPill.tsx  SettingsSheet.tsx  StreakBadge.tsx  StreakCard.tsx  StreakSheet.tsx  VerseCard.tsx
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  ENVIRONMENT.md  SETUP.md  TESTING.md  TROUBLESHOOTING.md
lib/: bible-data.ts  bible-reference-parser.ts  bookBackgroundSettings.ts  chat.ts  notifications.ts  settings.tsx  streak-helpers.ts  streak.tsx  supabase.ts  theme.ts  tts.ts  types.ts  utils.ts
research/: README.md
scripts/: .env.example  fix-incomplete.ts  ingest.ts  package-lock.json  package.json  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
supabase/: config.toml
tests/: bible-data.test.ts  bible-reference-parser.test.ts  bookBackgroundSettings.test.ts  notifications.test.ts  research-metrics.test.ts  settings.test.ts  streak-helpers.test.ts  supabase.test.ts  tts.test.ts  utils.test.ts
(+74 files in other folders)
