[package]
name = "aion"
version = "0.1.0"
description = "Aion — AI Bible Companion"
authors = ["Raouf"]
edition = "2021"

[lib]
name = "aion_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
